# sos-javascript

./: .travis.yml  pyproject.toml  setup.py  setup.py.old
src/sos_javascript/: _version.py  kernel.py
test/: test_JavaScript_kernel.py  test_data_exchange.py  test_interface.py
